feat(api): finish setup golang api
